Initial commit with basic gatsby/reason setup

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,12 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
+# bucklescript
+lib
+.merlin
+.bsb.lock
+/lib/bs/
+.graphql_ppx_cache
+.vscode/settings.json
+*.bs.js
