--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "LifeBlood",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A site for analyzing and tracking blood test results over time.",
   "version": "0.1.0",
-  "license": "0BSD",
+  "license": "BSD-3-Clause",
   "scripts": {
-    "build": "gatsby build",
+    "postinstall": "bsb -clean-world -make-world",
+    "build": "bsb -make-world && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
+    "re:start": "bsb -make-world -w",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
+    "clean": "bsb -clean-world && gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.23.12",
+    "@glennsl/bs-json": "^5.0.2",
+    "@jfrolich/gatsby-plugin-extract-schema": "0.0.4",
+    "@jfrolich/gatsby-plugin-reason": "^0.1.4",
+    "@reasonml-community/graphql-ppx": "^1.0.0-beta.21",
+    "bs-css-emotion": "^1.2.0",
+    "esm": "^3.2.25",
+    "gatsby": "^2.24.14",
+    "gatsby-plugin-netlify": "^2.3.11",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-snap": "^1.23.0",
+    "reason-gatsby": "^0.1.8",
+    "reason-react": "^0.9.1"
   },
   "devDependencies": {
+    "bs-platform": "^8.0.3",
+    "emotion-server": "^10.0.27",
     "prettier": "2.0.5"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/bhansconnect/life-blood"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/bhansconnect/life-blood/issues"
   }
 }
