--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@glennsl/bs-json": "^5.0.2",
     "@jfrolich/gatsby-plugin-extract-schema": "0.0.4",
     "@jfrolich/gatsby-plugin-reason": "^0.1.4",
+    "@prismicio/gatsby-source-prismic-graphql": "^3.6.11",
     "@reasonml-community/graphql-ppx": "^1.0.0-beta.21",
     "bs-css-emotion": "^1.2.0",
     "esm": "^3.2.25",
     "gatsby": "^2.24.14",
     "gatsby-plugin-netlify": "^2.3.11",
+    "prismic-javascript": "^3.0.1",
+    "prismic-reactjs": "^1.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-snap": "^1.23.0",
