--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "bs-platform": "^8.0.3",
+    "dotenv": "^8.2.0",
     "emotion-server": "^10.0.27",
     "prettier": "2.0.5"
   },
