Add a manifest and service worker to make app a PWA

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "bs-css-emotion": "^1.2.0",
     "esm": "^3.2.25",
     "gatsby": "^2.24.14",
+    "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.11",
+    "gatsby-plugin-offline": "^3.2.21",
     "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
